--- a/news_app/Controller/Onboarding/RegisterScreenVC/RegisterScreenVC.xib
+++ b/news_app/Controller/Onboarding/RegisterScreenVC/RegisterScreenVC.xib
@@ -1,22 +1,179 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RegisterScreenVC" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RegisterScreenVC" customModule="news_app" customModuleProvider="target">
             <connections>
+                <outlet property="button_register" destination="N0R-z0-rJK" id="LNN-jx-Kb0"/>
+                <outlet property="label_login" destination="bsb-8B-ICJ" id="Ggh-eJ-M3S"/>
+                <outlet property="text_email" destination="lmn-Fo-UlJ" id="dml-YE-SBz"/>
+                <outlet property="text_name" destination="cMb-Pg-ldh" id="7bh-yd-uAY"/>
+                <outlet property="text_password" destination="qFV-wf-yrJ" id="yOg-yl-r78"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jRV-VG-crL">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hey," textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Yn-ku-iAC">
+                            <rect key="frame" x="20" y="248" width="374" height="38.5"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Register Now" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Rf-mC-iYT">
+                            <rect key="frame" x="20" y="294.5" width="374" height="38.5"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bsb-8B-ICJ">
+                            <rect key="frame" x="20" y="353" width="374" height="37"/>
+                            <attributedString key="attributedText">
+                                <fragment content="if you already account">
+                                    <attributes>
+                                        <color key="NSColor" red="0.65490196078431373" green="0.6705882352941176" blue="0.6705882352941176" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <font key="NSFont" size="20" name="Helvetica-Light"/>
+                                        <font key="NSOriginalFont" size="20" name="Helvetica-Light"/>
+                                    </attributes>
+                                </fragment>
+                                <fragment content="  ">
+                                    <attributes>
+                                        <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                        <font key="NSFont" size="20" name="Helvetica-Light"/>
+                                        <font key="NSOriginalFont" metaFont="systemBold" size="17"/>
+                                    </attributes>
+                                </fragment>
+                                <fragment content="/ ">
+                                    <attributes>
+                                        <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <font key="NSFont" size="20" name="Helvetica-Light"/>
+                                        <font key="NSOriginalFont" metaFont="systemBold" size="17"/>
+                                    </attributes>
+                                </fragment>
+                                <fragment content="Login">
+                                    <attributes>
+                                        <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <font key="NSFont" size="20" name="Helvetica-Bold"/>
+                                        <integer key="NSUnderline" value="1"/>
+                                    </attributes>
+                                </fragment>
+                                <fragment>
+                                    <string key="content" base64-UTF8="YES">
+Cg
+</string>
+                                    <attributes>
+                                        <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                        <font key="NSFont" size="12" name="Menlo-Regular"/>
+                                        <real key="NSKern" value="0.0"/>
+                                        <color key="NSStrokeColor" red="0.83137255907058716" green="0.83137255907058716" blue="0.83137255907058716" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <real key="NSStrokeWidth" value="0.0"/>
+                                    </attributes>
+                                </fragment>
+                            </attributedString>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lmn-Fo-UlJ">
+                            <rect key="frame" x="20" y="470" width="374" height="45"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="45" id="4hm-hS-aHE"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                            <textInputTraits key="textInputTraits" returnKeyType="next" textContentType="email"/>
+                        </textField>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qFV-wf-yrJ">
+                            <rect key="frame" x="20" y="530" width="374" height="45"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="45" id="dBn-3Y-wxg"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                            <textInputTraits key="textInputTraits" returnKeyType="continue" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
+                        </textField>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N0R-z0-rJK">
+                            <rect key="frame" x="20" y="603" width="374" height="45"/>
+                            <color key="backgroundColor" red="1" green="0.2274509804" blue="0.2666666667" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="45" id="Gf2-62-oqF"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" title="Register">
+                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </state>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                    <real key="value" value="0.0"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                    <real key="value" value="10"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                            <connections>
+                                <action selector="registerButtonTapped:" destination="-1" eventType="touchUpInside" id="dQO-tD-1Mx"/>
+                            </connections>
+                        </button>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cMb-Pg-ldh">
+                            <rect key="frame" x="20" y="410" width="374" height="45"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="45" id="kfT-Z8-TMo"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                            <textInputTraits key="textInputTraits" returnKeyType="next" textContentType="name"/>
+                        </textField>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstItem="cMb-Pg-ldh" firstAttribute="top" secondItem="bsb-8B-ICJ" secondAttribute="bottom" constant="20" id="0az-Gy-2cv"/>
+                        <constraint firstItem="4Rf-mC-iYT" firstAttribute="leading" secondItem="0Yn-ku-iAC" secondAttribute="leading" id="3ol-ep-hKj"/>
+                        <constraint firstItem="cMb-Pg-ldh" firstAttribute="leading" secondItem="bsb-8B-ICJ" secondAttribute="leading" id="8D4-Fq-kCA"/>
+                        <constraint firstItem="qFV-wf-yrJ" firstAttribute="top" secondItem="lmn-Fo-UlJ" secondAttribute="bottom" constant="15" id="9gt-SA-czO"/>
+                        <constraint firstItem="0Yn-ku-iAC" firstAttribute="centerY" secondItem="jRV-VG-crL" secondAttribute="centerY" constant="-180.75" id="EHP-Zl-Tdg"/>
+                        <constraint firstItem="4Rf-mC-iYT" firstAttribute="top" secondItem="0Yn-ku-iAC" secondAttribute="bottom" constant="8" symbolic="YES" id="H4a-BP-9GT"/>
+                        <constraint firstItem="cMb-Pg-ldh" firstAttribute="trailing" secondItem="bsb-8B-ICJ" secondAttribute="trailing" id="KMm-dv-3dR"/>
+                        <constraint firstItem="0Yn-ku-iAC" firstAttribute="centerX" secondItem="jRV-VG-crL" secondAttribute="centerX" id="SAR-lg-QOw"/>
+                        <constraint firstItem="qFV-wf-yrJ" firstAttribute="trailing" secondItem="lmn-Fo-UlJ" secondAttribute="trailing" id="YbA-VZ-8oS"/>
+                        <constraint firstItem="bsb-8B-ICJ" firstAttribute="leading" secondItem="4Rf-mC-iYT" secondAttribute="leading" id="ZY2-vT-SnK"/>
+                        <constraint firstItem="N0R-z0-rJK" firstAttribute="top" secondItem="qFV-wf-yrJ" secondAttribute="bottom" constant="28" id="hzF-Fr-cSR"/>
+                        <constraint firstItem="lmn-Fo-UlJ" firstAttribute="trailing" secondItem="bsb-8B-ICJ" secondAttribute="trailing" id="jde-BN-WwO"/>
+                        <constraint firstItem="N0R-z0-rJK" firstAttribute="leading" secondItem="qFV-wf-yrJ" secondAttribute="leading" id="lxz-oB-Tpk"/>
+                        <constraint firstItem="bsb-8B-ICJ" firstAttribute="trailing" secondItem="4Rf-mC-iYT" secondAttribute="trailing" id="m4X-7O-gy6"/>
+                        <constraint firstItem="lmn-Fo-UlJ" firstAttribute="leading" secondItem="bsb-8B-ICJ" secondAttribute="leading" id="ndy-Wr-Ro8"/>
+                        <constraint firstItem="qFV-wf-yrJ" firstAttribute="leading" secondItem="lmn-Fo-UlJ" secondAttribute="leading" id="osH-pE-HY9"/>
+                        <constraint firstItem="bsb-8B-ICJ" firstAttribute="top" secondItem="4Rf-mC-iYT" secondAttribute="bottom" constant="20" id="p7d-Kn-Tbg"/>
+                        <constraint firstItem="lmn-Fo-UlJ" firstAttribute="top" secondItem="cMb-Pg-ldh" secondAttribute="bottom" constant="15" id="qr9-Xa-AQj"/>
+                        <constraint firstItem="0Yn-ku-iAC" firstAttribute="leading" secondItem="jRV-VG-crL" secondAttribute="leading" constant="20" id="qyB-Qs-wBb"/>
+                        <constraint firstItem="4Rf-mC-iYT" firstAttribute="trailing" secondItem="0Yn-ku-iAC" secondAttribute="trailing" id="tgm-at-Qmk"/>
+                        <constraint firstAttribute="trailing" secondItem="0Yn-ku-iAC" secondAttribute="trailing" constant="20" id="vPn-n8-Gh8"/>
+                        <constraint firstItem="N0R-z0-rJK" firstAttribute="trailing" secondItem="qFV-wf-yrJ" secondAttribute="trailing" id="yP6-xr-pb4"/>
+                    </constraints>
+                </view>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="jRV-VG-crL" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="CFF-v2-nsw"/>
+                <constraint firstItem="jRV-VG-crL" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="DCB-hx-4r9"/>
+                <constraint firstAttribute="trailing" secondItem="jRV-VG-crL" secondAttribute="trailing" id="Z1f-D3-FfD"/>
+                <constraint firstAttribute="bottom" secondItem="jRV-VG-crL" secondAttribute="bottom" id="vxy-Vu-xYB"/>
+            </constraints>
+            <point key="canvasLocation" x="139" y="139"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
